--- a/package.json
+++ b/package.json
@@ -4,10 +4,27 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@nx/js": "^16.5.2"
+  },
   "devDependencies": {
+    "@nx/eslint-plugin": "16.5.2",
+    "@nx/linter": "16.5.2",
+    "@nx/vite": "16.5.2",
+    "@types/node": "18.7.1",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "@vitest/coverage-c8": "~0.32.0",
+    "@vitest/ui": "~0.32.0",
+    "eslint": "~8.15.0",
+    "eslint-config-prettier": "8.1.0",
     "nx": "16.5.2",
-    "nx-cloud": "latest"
+    "nx-cloud": "latest",
+    "prettier": "^2.6.2",
+    "typescript": "~5.1.3",
+    "vite": "~4.3.9",
+    "vite-tsconfig-paths": "~4.2.0",
+    "vitest": "~0.32.0"
   },
   "workspaces": [
     "packages/*"
