--- a/package.json
+++ b/package.json
@@ -5,27 +5,26 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "@nx/esbuild": "^16.5.5",
-    "@nx/js": "^16.5.2"
+    "@nx/esbuild": "18.0.6",
+    "@nx/js": "18.0.6"
   },
   "devDependencies": {
-    "@nx/eslint-plugin": "16.5.2",
-    "@nx/linter": "16.5.2",
-    "@nx/vite": "16.5.2",
-    "@types/node": "18.7.1",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
+    "@nx/eslint-plugin": "18.0.6",
+    "@nx/vite": "18.0.6",
+    "@types/node": "18.19.21",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
     "@vitest/coverage-c8": "~0.32.0",
-    "@vitest/ui": "~0.32.0",
-    "eslint": "~8.15.0",
-    "eslint-config-prettier": "8.1.0",
-    "nx": "16.5.2",
-    "nx-cloud": "latest",
+    "@vitest/ui": "0.34.7",
+    "eslint": "8.48.0",
+    "eslint-config-prettier": "9.1.0",
+    "nx": "18.0.6",
     "prettier": "^2.6.2",
-    "typescript": "~5.1.3",
-    "vite": "~4.3.9",
+    "typescript": "5.3.3",
+    "vite": "5.1.4",
     "vite-tsconfig-paths": "~4.2.0",
-    "vitest": "~0.32.0"
+    "vitest": "0.34.6",
+    "@nx/eslint": "18.0.6"
   },
   "workspaces": [
     "packages/*"
